2010-05-28 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(DEBUG_BUILD_OUTPUT_DIR): New variable to represent
	debug build output directory.
	(BUILD_DEBUG_JRE_ARCH_DIR): Use DEBUG_BUILD_OUTPUT_DIR.
	(icedtea): Remove errorneous use of -debug.
	(icedtea-debug): Replace use of -debug with
	DEBUG_BUILD_OUTPUT_DIR.

2010-05-24  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	The --enable-hg option should take precedence
	over any --with-openjdk-src-zip/dir options.
	Using a live Mercurial checkout only makes
	sense in this context.

2010-05-20  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/shark_globals_zero.hpp
	(InlineSmallCode): Moved from here...
	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp
	(InlineSmallCode): ...to here.

2010-05-20  Gary Benson  <gbenson@redhat.com>

	PR icedtea/494
	* ports/hotspot/src/share/vm/shark/sharkInvariants.hpp
	(SharkCompileInvariants::java_lang_Throwable_klass): New method.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.hpp
	(SharkTopLevelBlock::_exc_handlers): New field.
	(SharkTopLevelBlock::_exceptions): Likewise.
	(SharkTopLevelBlock::compute_exceptions): New method.
	(SharkTopLevelBlock::num_exceptions): Rewritten.
	(SharkTopLevelBlock::exc_handler): New method.
	(SharkTopLevelBlock::exception): Rewritten.
	(SharkTopLevelBlock::marshal_exception_fast): New method.
	(SharkTopLevelBlock::marshal_exception_slow): Likewise.
	(SharkTopLevelBlock::handler_for_exception): Likewise.
	(SharkTopLevelBlock::make_trap): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::enter): Compute exceptions on entry,
	and skip over any null handlers.
	(SharkTopLevelBlock::compute_exceptions): New method.
	(SharkTopLevelBlock::handle_exception): Rewritten.
	(SharkTopLevelBlock::marshal_exception_fast): New method.
	(SharkTopLevelBlock::marshal_exception_slow): Likewise.
	(SharkTopLevelBlock::handler_for_exception): Likewise.